--- a/Image_to_text_to_audio.ipynb
+++ b/Image_to_text_to_audio.ipynb
@@ -39,9 +39,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2eYBmwDWDAJ",
-        "outputId": "dea9b1a2-117a-460b-e85d-7aaf22ca5120"
+        "outputId": "c24c1216-e596-4a59-ebb0-a71c6d780e64"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -50,26 +50,50 @@
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
             "Reading state information... Done\n",
-            "tesseract-ocr is already the newest version (4.1.1-2.1build1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 20 not upgraded.\n",
-            "Requirement already satisfied: pytesseract in /usr/local/lib/python3.11/dist-packages (0.3.13)\n",
+            "The following additional packages will be installed:\n",
+            "  tesseract-ocr-eng tesseract-ocr-osd\n",
+            "The following NEW packages will be installed:\n",
+            "  tesseract-ocr tesseract-ocr-eng tesseract-ocr-osd\n",
+            "0 upgraded, 3 newly installed, 0 to remove and 29 not upgraded.\n",
+            "Need to get 4,816 kB of archives.\n",
+            "After this operation, 15.6 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr-eng all 1:4.00~git30-7274cfa-1.1 [1,591 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr-osd all 1:4.00~git30-7274cfa-1.1 [2,990 kB]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr amd64 4.1.1-2.1build1 [236 kB]\n",
+            "Fetched 4,816 kB in 0s (12.1 MB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 3.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package tesseract-ocr-eng.\n",
+            "(Reading database ... 125044 files and directories currently installed.)\n",
+            "Preparing to unpack .../tesseract-ocr-eng_1%3a4.00~git30-7274cfa-1.1_all.deb ...\n",
+            "Unpacking tesseract-ocr-eng (1:4.00~git30-7274cfa-1.1) ...\n",
+            "Selecting previously unselected package tesseract-ocr-osd.\n",
+            "Preparing to unpack .../tesseract-ocr-osd_1%3a4.00~git30-7274cfa-1.1_all.deb ...\n",
+            "Unpacking tesseract-ocr-osd (1:4.00~git30-7274cfa-1.1) ...\n",
+            "Selecting previously unselected package tesseract-ocr.\n",
+            "Preparing to unpack .../tesseract-ocr_4.1.1-2.1build1_amd64.deb ...\n",
+            "Unpacking tesseract-ocr (4.1.1-2.1build1) ...\n",
+            "Setting up tesseract-ocr-eng (1:4.00~git30-7274cfa-1.1) ...\n",
+            "Setting up tesseract-ocr-osd (1:4.00~git30-7274cfa-1.1) ...\n",
+            "Setting up tesseract-ocr (4.1.1-2.1build1) ...\n",
+            "Processing triggers for man-db (2.10.2-1) ...\n",
+            "Collecting pytesseract\n",
+            "  Downloading pytesseract-0.3.13-py3-none-any.whl.metadata (11 kB)\n",
             "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.11/dist-packages (from pytesseract) (24.2)\n",
-            "Requirement already satisfied: Pillow>=8.0.0 in /usr/local/lib/python3.11/dist-packages (from pytesseract) (9.0.0)\n",
-            "Requirement already satisfied: gTTS in /usr/local/lib/python3.11/dist-packages (2.5.4)\n",
-            "Requirement already satisfied: requests<3,>=2.27 in /usr/local/lib/python3.11/dist-packages (from gTTS) (2.32.3)\n",
-            "Requirement already satisfied: click<8.2,>=7.1 in /usr/local/lib/python3.11/dist-packages (from gTTS) (8.1.8)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->gTTS) (3.4.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->gTTS) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->gTTS) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->gTTS) (2025.1.31)\n",
-            "Requirement already satisfied: Pillow==9.0.0 in /usr/local/lib/python3.11/dist-packages (9.0.0)\n"
+            "Requirement already satisfied: Pillow>=8.0.0 in /usr/local/lib/python3.11/dist-packages (from pytesseract) (11.1.0)\n",
+            "Downloading pytesseract-0.3.13-py3-none-any.whl (14 kB)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DwgN11GcUIvf"
       },
@@ -83,7 +107,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img = Image.open('/content/Picture1.png')\n",
+        "img = Image.open('/content/Picture1.jpg')\n",
         "print(img)"
       ],
       "metadata": {
@@ -93,7 +117,7 @@
         "id": "UCVJlIoWUaO0",
         "outputId": "5bb27fad-3b9a-43c5-90d8-397a9e8108cc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +143,7 @@
         "id": "YlcdrEN5Uw6-",
         "outputId": "e36b1b35-a42a-4609-ab45-0f5675d99eb3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +194,7 @@
         "id": "BzAvkFZ3fYPJ",
         "outputId": "e0914d0a-b0d0-410a-d969-921702f7495b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
